ユーザーの情報を取得するAPIを追加
